fixing spacing in css file

--- a/css/style.css
+++ b/css/style.css
@@ -99,15 +99,14 @@ li {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  background-image: url("./img/Ellipse 19.png"); 
+  background-image: url("./img/Ellipse 19.png");
   position: absolute;
-width: 68px;
-height: 68px;
-left: 339px;
-top: 700px;
-/* Theme 4 / Primary 4 */
-background: #EDECFF;
-filter: blur(25px);
+  width: 68px;
+  height: 68px;
+  left: 339px;
+  top: 700px;
+  background: #edecff;
+  filter: blur(25px);
 }
 
 .list-technologies {
@@ -130,7 +129,6 @@ filter: blur(25px);
   font-weight: 500px;
   font-size: 12px;
   line-height: 24px;
-  /* padding-top: 15px; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -162,8 +160,6 @@ filter: blur(25px);
   font-size: 12px;
   line-height: 24px;
   margin: auto 0;
-
-  /* padding-top: 40px; */
   justify-self: flex-start;
   padding: 15px 1rem 1rem 1rem;
 }
@@ -210,14 +206,14 @@ filter: blur(25px);
 }
 
 .line2 {
-  height: 0px;
+  height: 0;
   width: 500px;
-  left: 0px;
+  left: 0;
   top: 9px;
   border-radius: 10px;
   padding: 40px;
   margin: auto;
-  }
+}
 
 .socialmedia {
   display: flex;
@@ -370,10 +366,11 @@ filter: blur(25px);
   width: 120px;
   left: -15px;
   top: 1px;
-  
+
   /* Theme 4 / Primary 4 */
-  /*background: #EDECFF;
-  filter: blur(25px);*/
+
+  /* background: #EDECFF;
+  filter: blur(25px); */
 }
 
 .ellipse19 {
@@ -381,9 +378,10 @@ filter: blur(25px);
   width: 80px;
   right: 160px;
   top: 1px;
-  
 
-/* Theme 4 / Primary 4 */
-/*background: #EDECFF;
-filter: blur(25px);*/
+
+  /* Theme 4 / Primary 4 */
+
+  /* background: #EDECFF;
+filter: blur(25px); */
 }
